<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red_inec"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />

    <ScrollView
        android:id="@+id/svPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:background="@drawable/ic_back_jne402"
        android:layout_below="@+id/toolbar"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="410dp"
                android:id="@+id/layout_principal">

                <GridLayout
                    android:id="@+id/ui_grid_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="1"
                    android:rowCount="3"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/dimen20"
                    android:layout_marginRight="@dimen/dimen9"
                    android:orientation="horizontal"
                    >
                    <GridLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:columnCount="3"
                        android:rowCount="1"
                        android:paddingTop="40dp"
                        android:layout_height="wrap_content">
                        <Button
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/ic_jee"
                            android:linksClickable="true"
                            android:autoLink="web"
                            android:text="@string/weblink_one"
                            android:paddingBottom="5dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="8dp"
                            android:textSize="1dp"
                            android:textColor="@color/tw__transparent"
                            android:visibility="visible"/>
                        <TextView
                            android:text="@string/separador"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                             />
                        <Button
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/ic_infogob"
                            android:paddingBottom="5dp"
                            android:linksClickable="true"
                            android:autoLink="web"
                            android:text="@string/weblink_two"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="8dp"
                            android:textSize="1dp"
                            android:visibility="visible"
                            android:textColor="@color/tw__transparent" />
                    </GridLayout>
                    <GridLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:columnCount="3"
                        android:rowCount="1"
                        android:paddingTop="@dimen/margin30"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/ui_mis_rutas"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/ic_icon_rutas"
                            android:paddingBottom="5dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/dimen9"
                            android:textColor="#e8e9e9" />
                        <TextView
                            android:text="@string/separador"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <Button
                            android:id="@+id/ui_registrar_incidencia"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/ic_icon_activity"
                            android:paddingBottom="5dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/dimen9"
                            android:textColor="#e8e9e9" />
                    </GridLayout>

                    <GridLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:columnCount="3"
                        android:rowCount="1"
                        android:paddingTop="@dimen/margin30"
                        android:layout_marginBottom="@dimen/dimen8"
                        android:layout_height="wrap_content">
                        <Button
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/ic_jne"
                            android:paddingBottom="5dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:linksClickable="true"
                            android:autoLink="web"
                            android:text="@string/weblink_three"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/dimen9"
                            android:visibility="visible"
                            android:textColor="@color/tw__transparent" />
                        <TextView
                            android:text="@string/separador"
                            android:layout_width="match_parent"
                            android:visibility="gone"
                            android:layout_height="wrap_content"
                            />
                        <Button
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/ic_link"
                            android:paddingBottom="5dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:visibility="gone"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/dimen9"
                            android:textColor="#e8e9e9" />
                    </GridLayout>
                </GridLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/listaValoracionDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="65dp"
                android:layout_below="@+id/layout_principal"
                >
                <TextView
                    android:id="@+id/txt_usuario_session"
                    android:textColor="@color/white"
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    android:background="@color/red_inec"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/str_usuario_session"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>